# mai_object-oriented-programming_lab-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  tests.cpp
include/: eleven.hpp
src/: arithmetic.cpp  compare.cpp  constructors.cpp  main.cpp  utilities.cpp
